--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -157,7 +157,7 @@ Theoretical concepts are fundamental to the study of computational chemistry, pr
 
 % TODO: citation for molecule definition
 
-Molecules are the fundamental building blocks of matter, consisting of two or more atoms connected by chemical bonds. Molecules can vary widely in size and complexity, ranging from simple diatomic molecules like oxygen to highly complex organic compounds like proteins and DNA. In this thesis work, we work with two main categories of molecules: micromolecules and macromolecules. The following sections provide an overview of these two categories, along with an explanation of the structure of polymers, and finally explain alternative conformations of molecular structures.
+Molecules are the fundamental building blocks of matter, consisting of two or more atoms connected by chemical bonds. Molecules can vary widely in size and complexity, ranging from simple diatomic molecules like oxygen to highly complex organic compounds like proteins and DNA. \cite{britannica_molecule} In this thesis work, we work with two main categories of molecules: micromolecules and macromolecules. The following sections provide an overview of these two categories, along with an explanation of the structure of polymers, and finally explain alternative conformations of molecular structures.
 
 \subsection{Micromolecules}
 
