--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -88,7 +88,7 @@
       These advancements provide researchers with enhanced visualization capabilities and user interfaces for calculating and analyzing partial atomic charges.
     },
     thanks      = {%
-        TODO
+      I would like to thank my advisor RNDr. Tomáš Raček, Ph.D. for his advice and guidance throughout the writing of this thesis. I would also like to thank my family and friends for their love and support.
     },
     bib         = {%
         main.bib,
