--- a/main.bib
+++ b/main.bib
@@ -100,8 +100,13 @@
   eprint   = {https://academic.oup.com/nar/article-pdf/49/W1/W431/38842088/gkab314.pdf}
 }
 
-
-
+% molecule definition
+@online{britannica_molecule,
+  author  = {{Britannica, T. Editors of Encyclopaedia}},
+  title   = {Molecule},
+  url     = {https://www.britannica.com/science/molecule},
+  urldate = {2023-05-14}
+}
 
 @misc{schindler2021thesis,
   author = {Schindler, Ondřej},
@@ -398,13 +403,6 @@
   author    = {Tsai, C Stan},
   year      = {2003},
   publisher = {John Wiley \& Sons}
-}
-
-@online{britannica_molecule,
-  author  = {{Britannica, T. Editors of Encyclopaedia}},
-  title   = {Molecule},
-  url     = {https://www.britannica.com/science/molecule},
-  urldate = {2023-05-14}
 }
 
 @online{zucconi2016secrets,
