--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -165,37 +165,32 @@ Molecules are the smallest units of a chemical compound that retain the compound
 
 This thesis works with two main categories of molecules: micromolecules and macromolecules. The following sections provide an overview of these two categories, along with an explanation of the structure of polymers, and finally, explain conformation isomerism of molecular structures.
 
+% * ✅
 \subsection{Micromolecules}
 
-% TODO: citations
+Micromolecules, also known as small molecules or monomers, are molecules of low molecular weight that are relatively compact in size, and typically composed of a low number of atoms. Their small size allows us to describe them simply by the composition of their atoms and bonds. Micromolecules play crucial roles in various biological processes and are involved in numerous chemical reactions in living organisms. \cite{clark2018biology,micromolecule_definition}
 
-Micromolecules, also known as small molecules, are relatively compact in size and are typically composed of a low number of atoms. Their small size allows to describe them simply by their atoms and bonds. Micromolecules play crucial roles in various biological processes and are involved in numerous chemical reactions in living organisms. 
-
-Examples of micromolecules include water, glucose, or ethanol. Additionally, many drugs are small molecules. Figure \ref{fig:aspirin} shows the structure of aspirin, a micromolecule used to treat pain, fever, or inflammation.
+Examples of micromolecules include water, glucose, or ethanol. Additionally, many drugs are small molecules. \cite{smallmoleculewiki} Figure \ref{fig:aspirin} shows the structure of aspirin \cite{pubchem_aspirin}, a drug used to treat pain, fever, or inflammation.
 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=7cm]{figures/aspirin.png}
   \end{center}
-  \caption{Aspirin.}
+  \caption{Aspirin, a drug used to treat pain, fever, or inflammation.}
   \label{fig:aspirin}
 \end{figure}
 
 \subsection{Macromolecules}
 
-% TODO: citations
+Macromolecules are large molecules composed of many atoms, often thousands or even millions. They are typically formed through polymerization, where smaller subunits, called monomers, combine to form larger chain-like structures called polymers, such as proteins, nucleic acids, and carbohydrates. Macromolecules are crucial for the structure and function of cells and organisms. Their large size allows for complex interactions and the ability to carry out specialized tasks within living systems. \cite{clark2018biology}
 
-On the other hand, macromolecules are large and complex molecules composed of a high number of atoms, often thousands or even millions. They are typically formed through polymerization, where smaller subunits, called monomers, combine to form larger chain-like structures, called polymers.
-
-Macromolecules are crucial for the structure, function, and regulation of cells and organisms. Their large size allows for complex interactions and the ability to carry out specialized tasks within living systems. Examples of macromolecules include proteins, nucleic acids, and carbohydrates.
-
-Figure \ref{fig:hemoglobin} shows the structure of hemoglobin, a protein found in red blood cells that transports oxygen throughout the body.
+ \cite{macromolecule_definition} Figure \ref{fig:hemoglobin} depicts a protein called hemoglobin, which is responsible for transporting oxygen throughout the body.
 
 \begin{figure}[htbp]
   \begin{center}
     \includegraphics[width=7cm]{figures/hemoglobin.png}
   \end{center}
-  \caption{Hemoglobin.}
+  \caption{Hemoglobin, a protein for transporting oxygen throughout the body.}
   \label{fig:hemoglobin}
 \end{figure}
 
