--- a/main.bib
+++ b/main.bib
@@ -105,7 +105,47 @@
   author  = {{Britannica, T. Editors of Encyclopaedia}},
   title   = {Molecule},
   url     = {https://www.britannica.com/science/molecule},
-  urldate = {2023-05-14}
+  urldate = {2023-05-17}
+}
+
+% micromolecule definition
+@online{micromolecule_definition,
+  author  = {{BiologyOnline}},
+  title   = {Micromolecule},
+  url     = {https://www.biologyonline.com/dictionary/micromolecule},
+  urldate = {2023-05-17}
+}
+
+% micromolecule definition
+@online{smallmoleculewiki,
+  author  = {{Wikipedia contributors}},
+  title   = {Small molecule},
+  url     = {https://en.wikipedia.org/wiki/Small_molecule},
+  urldate = {2023-05-17}
+}
+
+% micromolecule definition, macromolecule definition
+@misc{clark2018biology,
+  title     = {Biology, (OpenStax)},
+  author    = {Clark, Mary Ann and Choi, Jung and Douglas, Matthew},
+  year      = {2018},
+  publisher = {OpenStax}
+}
+
+% pubchem aspirin
+@online{pubchem_aspirin,
+  author  = {{National Center for Biotechnology Information}},
+  title   = {PubChem Compound Summary for CID 2244, Aspirin},
+  url     = {https://pubchem.ncbi.nlm.nih.gov/compound/Aspirin},
+  urldate = {2023-05-17}
+}
+
+% macromolecule definition
+@online{macromolecule_definition,
+  author  = {{Wikipedia contributors}},
+  title   = {Macromolecule},
+  url     = {https://en.wikipedia.org/wiki/Macromolecule},
+  urldate = {2023-05-17}
 }
 
 @misc{schindler2021thesis,
@@ -409,14 +449,14 @@
   author  = {Zucconi, Alan},
   title   = {The secrets of colour interpolation},
   url     = {https://www.alanzucconi.com/2016/01/06/colour-interpolation/},
-  urldate = {2023-05-14}
+  urldate = {2023-05-17}
 }
 
 @online{mmcif_dictionary,
   author  = {wwPDB},
   title   = {PDBx/mmCIF Dictionary Resources},
   url     = {https://mmcif.wwpdb.org/},
-  urldate = {2023-05-14}
+  urldate = {2023-05-17}
 } 
 
 @article{mccoy1997hydrophobic,
@@ -473,7 +513,7 @@
 } 
 
 @online{wikipedia_pdbfile,
-  author  = {Wikipedia contributors},
+  author  = {{Wikipedia contributors}},
   title   = {Protein Data Bank (file format)},
   url     = {https://en.wikipedia.org/wiki/Protein_Data_Bank_(file_format)},
   urldate = {2023-05-17}
@@ -508,3 +548,11 @@ https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/tutorials/pdbintro.html
   url     = {https://pdb101.rcsb.org/learn/guide-to-understanding-pdb-data/hierarchical-structure-of-proteins},
   urldate = {2023-05-17}
 } 
+
+% biomolecular structure
+@book{branden1999introduction,
+  title     = {Bioinformatics for beginners: genes, genomes, molecular evolution, databases and analytical tools},
+  author    = {Choudhuri, Supratim},
+  year      = {2014},
+  publisher = {Elsevier}
+}
