--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -168,9 +168,9 @@ This thesis works with two main categories of molecules: micromolecules and macr
 % * ✅
 \subsection{Micromolecules}
 
-Micromolecules, also known as small molecules or monomers, are molecules of low molecular weight that are relatively compact in size, and typically composed of a low number of atoms. Their small size allows us to describe them simply by the composition of their atoms and bonds. Micromolecules play crucial roles in various biological processes and are involved in numerous chemical reactions in living organisms. \cite{clark2018biology,micromolecule_definition}
+Micromolecules, also known as small molecules or monomers, are molecules of low molecular weight that are relatively compact in size, and typically composed of a low number of atoms. Their small size allows us to describe them simply by the composition of their atoms and bonds. Micromolecules play crucial roles in various biological processes and are involved in numerous chemical reactions in living organisms. \cite{clark2018biology,micromolecule_definition} Examples of micromolecules include water, glucose, or ethanol. Additionally, many drugs are small molecules. \cite{smallmoleculewiki}
 
-Examples of micromolecules include water, glucose, or ethanol. Additionally, many drugs are small molecules. \cite{smallmoleculewiki} Figure \ref{fig:aspirin} shows the structure of aspirin \cite{pubchem_aspirin}, a drug used to treat pain, fever, or inflammation.
+Figure \ref{fig:aspirin} shows the structure of aspirin \cite{pubchem_aspirin}, a drug used to treat pain, fever, or inflammation.
 
 \begin{figure}[htbp]
   \begin{center}
@@ -180,11 +180,12 @@ Examples of micromolecules include water, glucose, or ethanol. Additionally, man
   \label{fig:aspirin}
 \end{figure}
 
+% * ✅
 \subsection{Macromolecules}
 
-Macromolecules are large molecules composed of many atoms, often thousands or even millions. They are typically formed through polymerization, where smaller subunits, called monomers, combine to form larger chain-like structures called polymers, such as proteins, nucleic acids, and carbohydrates. Macromolecules are crucial for the structure and function of cells and organisms. Their large size allows for complex interactions and the ability to carry out specialized tasks within living systems. \cite{clark2018biology}
+Macromolecules are large molecules composed of many atoms, often thousands or even millions. They are typically formed through polymerization, where smaller subunits, called monomers, combine to form larger chain-like structures called polymers, such as proteins, nucleic acids, and carbohydrates. Macromolecules are crucial for the structure and function of cells and organisms. Their large size allows for complex interactions and the ability to carry out specialized tasks within living systems. \cite{clark2018biology,gu2009structural}
 
- \cite{macromolecule_definition} Figure \ref{fig:hemoglobin} depicts a protein called hemoglobin, which is responsible for transporting oxygen throughout the body.
+ Figure \ref{fig:hemoglobin} depicts a protein called hemoglobin, which is responsible for transporting oxygen throughout the body.
 
 \begin{figure}[htbp]
   \begin{center}
@@ -199,15 +200,13 @@ Macromolecules are large molecules composed of many atoms, often thousands or ev
 
 % TODO: citations
 
-Describing macromolecules solely by their atoms and bonds becomes impractical due to the large number of atoms involved. Instead, macromolecules are characterized by their residues and chains.
+Describing macromolecules solely by their atoms and bonds becomes impractical due to the many atoms involved. Instead, macromolecules are characterized by their residues and chains.
 
-A residue refers to a specific monomer or building block within a macromolecule. In the case of proteins, each residue corresponds to an amino acid. For nucleic acids, each residue corresponds to a nucleotide. Residues are linked together by chemical bonds to form chains. When a macromolecule consists of multiple chains, each chain is assigned a unique identifier, usually described by letters, starting with the letter A. Residues inside a chain are identified by a number, starting with the number 1.
+A residue refers to a specific monomer or building block within a macromolecule. Each residue corresponds to an amino acid and nucleotide for proteins and nucleic acids, respectively. Chemical bonds link residues together to form chains. Each chain within a macromolecule is assigned a unique identifier, usually described by letters, starting with the letter A. Residues inside a chain are identified by a number, starting with the number 1. \cite{gu2009structural}
 
-The structure of a macromolecule can be described at different levels, each providing a different perspective and abstraction of the macromolecule. The primary structure refers to the sequence of monomers in the polymer chain. The secondary structure involves local folding patterns within the polymer chain, such as alpha helices and beta sheets in proteins. The tertiary structure encompasses the overall 3D shape of the macromolecule. Finally, the quaternary structure describes the interactions between multiple macromolecules. \cite{pdb101_hierarchical}
+The structure of a macromolecule can be described at different levels, each providing a distinct perspective and level of abstraction. The primary structure refers to the sequence of monomers in the polymer chain. The secondary structure involves local folding patterns within the polymer chain, such as alpha helices and beta sheets in proteins. The tertiary structure encompasses the overall 3D shape of the macromolecule. Finally, the quaternary structure describes the interactions between multiple macromolecules. \cite{pdb101_hierarchical}
 
-% TODO: add mentions of the different levels of structure in the figures
-
-Figure \ref{fig:structure1} attempts to visually explain the hierarchy of a protein consisting of two chains, A and B. Chain B is highlighted and colored to emphasize its residues. For instance, one of the residues in chain B is ARG 19, which corresponds to the 19th residue in chain B and represents the amino acid arginine. Figure \ref{fig:structure2} depicts the atoms of the selected residue, ARG 19.
+Figure \ref{fig:structure1} attempts to visually explain the hierarchy of a protein consisting of two chains, A and B. Chain B is highlighted and colored to emphasize its residues. For instance, one of the residues in chain B is ARG 19, corresponding to the 19th residue in chain B and representing the amino acid arginine. Figure \ref{fig:structure2} depicts the atoms of the selected residue, ARG 19.
 
 \begin{figure}[htbp]
   \centering
