--- a/main.bib
+++ b/main.bib
@@ -148,6 +148,15 @@
   urldate = {2023-05-17}
 }
 
+% macromolecule definition
+@book{gu2009structural,
+  title     = {Structural bioinformatics},
+  author    = {Gu, Jenny and Bourne, Philip E},
+  volume    = {44},
+  year      = {2009},
+  publisher = {John Wiley \& Sons}
+}
+
 @misc{schindler2021thesis,
   author = {Schindler, Ondřej},
   title  = {Parciální atomové náboje peptidů [online]},
@@ -355,14 +364,6 @@
   doi      = {10.1107/S0021889891004399},
   url      = {https://doi.org/10.1107/S0021889891004399},
   abstract = {The {\it MOLSCRIPT} program produces plots of protein structures using several different kinds of representations. Schematic drawings, simple wire models, ball-and-stick models, CPK models and text labels can be mixed freely. The schematic drawings are shaded to improve the illusion of three dimensionality. A number of parameters affecting various aspects of the objects drawn can be changed by the user. The output from the program is in PostScript format.}
-}
-
-@book{gu2009structural,
-  title     = {Structural bioinformatics},
-  author    = {Gu, Jenny and Bourne, Philip E},
-  volume    = {44},
-  year      = {2009},
-  publisher = {John Wiley \& Sons}
 }
 
 @article{pernaa2017introduction,
