--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -195,18 +195,17 @@ Macromolecules are large molecules composed of many atoms, often thousands or ev
   \label{fig:hemoglobin}
 \end{figure}
 
+% * ✅
 \subsection{Polymer structure}
 \label{section:polymer_structure}
-
-% TODO: citations
 
 Describing macromolecules solely by their atoms and bonds becomes impractical due to the many atoms involved. Instead, macromolecules are characterized by their residues and chains.
 
 A residue refers to a specific monomer or building block within a macromolecule. Each residue corresponds to an amino acid and nucleotide for proteins and nucleic acids, respectively. Chemical bonds link residues together to form chains. Each chain within a macromolecule is assigned a unique identifier, usually described by letters, starting with the letter A. Residues inside a chain are identified by a number, starting with the number 1. \cite{gu2009structural}
 
-The structure of a macromolecule can be described at different levels, each providing a distinct perspective and level of abstraction. The primary structure refers to the sequence of monomers in the polymer chain. The secondary structure involves local folding patterns within the polymer chain, such as alpha helices and beta sheets in proteins. The tertiary structure encompasses the overall 3D shape of the macromolecule. Finally, the quaternary structure describes the interactions between multiple macromolecules. \cite{pdb101_hierarchical}
+The structure of a macromolecule can be described at different levels, each providing a distinct perspective and level of abstraction. The primary structure refers to the sequence of monomers in the polymer chain. The secondary structure involves local folding patterns within the polymer chain, such as alpha helices and beta sheets in proteins. The tertiary structure encompasses the overall 3D shape of the macromolecule. Finally, the quaternary structure describes the interactions between multiple macromolecules. \cite{branden1999introduction, pdb101_hierarchical}
 
-Figure \ref{fig:structure1} attempts to visually explain the hierarchy of a protein consisting of two chains, A and B. Chain B is highlighted and colored to emphasize its residues. For instance, one of the residues in chain B is ARG 19, corresponding to the 19th residue in chain B and representing the amino acid arginine. Figure \ref{fig:structure2} depicts the atoms of the selected residue, ARG 19.
+Figure \ref{fig:structure1} displays the ternary structure of a protein consisting of two chains, A and B. The figure focuses on chain B, which is colored to emphasize its primary structure - the sequence of its residues. Figure \ref{fig:structure2} depicts one of the residues of chain B, ARG 19, which corresponds to the 19th residue in chain B and represents the amino acid arginine.
 
 \begin{figure}[htbp]
   \centering
